# bot

./: README.md  package.py  pyproject.toml
bot/: __main__.py  bot.py
